Get running on heroku, magic link (#1)
* got running locally, cleanup still needed

* working on Dockerfile for deployment to heroku

* dockerfile and nginx config updates, it runs on heroku but reqs to server don't work

* revert to previous commit, add docker ignore

* changed npm commands in dockerfile to yarn

* changed apiUrl

* replaced OGN with TRU

* changed origin to trusttoken, removed bonuscta on dashboard

* investor vesting schedule updated, displaying with dummy data

* updates to build need to yarn build in client dir first

* added test ping endpoint

* dockerfiles for be and fe working

* logo changes

* deploy client bash script

* dotenv build changes to use NODE_ENV

* import purchasers script mostly working

* deploy server changes, more visual changes

* updated seed script to update grants for multiple entries

* added new vesting schedule image

* changed purchaser and vesting copy

* removed locked bonus tokens

* email copy changes

* fixed contact support links

* fixed build with package name changes, beginning of magic link

* magic link login working

--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -16,7 +16,7 @@ $grid-gutter-width: 10px;
   --muted-text: #638298;
   --secondary-text: #8fa7b7;
   --text: #212529;
-  --blue: #007cff;
+  --blue: #061439;
   --green: #00db8d;
   --purple: #6e3bea;
   --red: #ff0000;
