--- a/server/src/templates/header.mjml
+++ b/server/src/templates/header.mjml
@@ -1,9 +1,9 @@
-<mj-section background-color="#007cff">
+<mj-section background-color="#061439">
     <mj-column>
-        <mj-image width="138px" height="32px" src="https://www.originprotocol.com/static/img/origin-logo@3x.png" srcset="
-              https://www.originprotocol.com/static/img/origin-logo.png
-              https://www.originprotocol.com/static/img/origin-logo@2x.png 2x,
-              https://www.originprotocol.com/static/img/origin-logo@3x.png 3x" alt="Origin Protocol logo">
+        <mj-image width="138px" height="32px" src="https://tt-ecosystem-portal-helper.s3-us-west-2.amazonaws.com/images/tt-logotype-white%403x.png" srcset="
+              https://tt-ecosystem-portal-helper.s3-us-west-2.amazonaws.com/images/tt-logotype-white.png
+              https://tt-ecosystem-portal-helper.s3-us-west-2.amazonaws.com/images/tt-logotype-white%402x.png 2x,
+              https://tt-ecosystem-portal-helper.s3-us-west-2.amazonaws.com/images/tt-logotype-white%403x.png 3x" alt="TrustToken logo">
         </mj-image>
     </mj-column>
 </mj-section>
