--- a/server/src/templates/welcome.mjml
+++ b/server/src/templates/welcome.mjml
@@ -48,11 +48,11 @@
 		    <a href="mailto:<%= supportEmail %>" style="color: #98a7b4; text-decoration: none;"><%= supportEmail %></a>
 		</mj-text>
 		<mj-text align="center" color="#98a7b4" font-size="12px">
-		    745 Clementina Street, Unit A, San Francisco, CA, 94103
+            325 9th Street, San Francisco, CA 94103 United States
 		</mj-text>
 		<mj-text align="center" font-size="12px">
-		    <a href="https://www.originprotocol.com" style="color: #98a7b4; text-decoration: none;">
-			originprotocol.com
+		    <a href="https://www.trusttoken.com" style="color: #98a7b4; text-decoration: none;">
+			trusttoken.com
 		    </a>
 		</mj-text>
 	    </mj-column>
