--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -725,3 +725,16 @@ input, select {
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
 }
+
+.get-tusd-button {
+  background-color: #1253FA;
+  color: #FFFFFF;
+  height: 20px;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  border-radius: 2px;
+  border: none;
+  margin: 0px 0px;
+  padding: 0px 4px;
+}
