Styling. Add disclaimer to PP and TOU pages.

--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -472,7 +472,7 @@ input, select {
 }
 
 .terms-wrapper-full-screen {
-  background-color: var(--accent);
+  background-color: white;
   border-radius: 10px;
   padding: 20px;
   margin: 0px 0;
